--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,9 +2,8 @@ name: Monitor and Build ImmortalWrt (x86_64 Master)
 
 on:
   schedule:
-    # 每周一凌晨2点检查更新（北京时间上午10点，UTC+8），可根据需要调整
     - cron: '0 2 * * 1'
-  workflow_dispatch: # 允许手动触发
+  workflow_dispatch:
 
 env:
   TARGET: x86
@@ -22,66 +21,62 @@ jobs:
       uses: actions/checkout@v4
 
     - name: Install dependencies
+      shell: bash
       run: |
         apt-get update
         apt-get install -y ack antlr3 asciidoc autoconf automake autopoint binutils bison build-essential \
-          bzip2 ccache clang cmake cpio curl device-tree-compiler ecj fastjar flex gawk gettext gcc-multilib \
-          g++-multilib git gnutls-dev gperf haveged help2man intltool lib32gcc-s1 libc6-dev-i386 libelf-dev \
-          libglib2.0-dev libgmp3-dev libltdl-dev libmpc-dev libmpfr-dev libncurses-dev libpython3-dev \
-          libreadline-dev libssl-dev libtool libyaml-dev libz-dev lld llvm lrzsz mkisofs msmtp nano \
-          ninja-build p7zip p7zip-full patch pkgconf python3 python3-pip python3-ply python3-docutils \
-          python3-pyelftools qemu-utils re2c rsync scons squashfs-tools subversion swig texinfo uglifyjs \
-          upx-ucl unzip vim wget xmlto xxd zlib1g-dev zstd
-      # 依赖项列表参考了ImmortalWrt官方文档[citation:2][citation:4]
+          ... # 你的依赖列表
+        # 特别安装 bash
+        apt-get install -y bash
 
     - name: Clone ImmortalWrt master branch
+      shell: bash
       run: |
         git clone -b master --single-branch --filter=blob:none https://github.com/immortalwrt/immortalwrt.git $WORKING_DIRECTORY
 
     - name: Check for updates in master branch
       id: check-update
+      shell: bash
       run: |
-        cd $WORKING_DIRECTORY
-        # 获取当前最新提交的哈希值
-        git log -1 --format=%H > ../current_head.hash
-        echo "CURRENT_HEAD=$(cat ../current_head.hash)" >> $GITHUB_OUTPUT
+        cd "$WORKING_DIRECTORY"
+        LATEST_COMMIT_HASH=$(git log -1 --format=%H)
+        echo "latest_commit_hash=$LATEST_COMMIT_HASH" >> "$GITHUB_OUTPUT"
+        echo "CURRENT_HASH=$LATEST_COMMIT_HASH" >> "$GITHUB_ENV"
 
-    - name: Check previous commit
-      id: check-previous
+    - name: Restore cached commit hash
+      id: cache-previous-hash
       uses: actions/cache@v4
       with:
-        path: ./cache
-        key: ${{ runner.os }}-immortalwrt-master-head
+        path: ./.github/cache
+        key: immortalwrt-master-${{ env.CURRENT_HASH }}
 
     - name: Build ImmortalWrt if source updated
-      if: steps.check-previous.outputs.cache-hit != 'true' || steps.check-update.outputs.CURRENT_HEAD != hashFiles('cache/previous_head.hash')
+      shell: bash
+      # 如果缓存未命中，说明是一个新的提交，需要构建
+      if: steps.cache-previous-hash.outputs.cache-hit != 'true'
       run: |
         set -e
-        cd $WORKING_DIRECTORY
+        cd "$WORKING_DIRECTORY"
 
-        # 更新和安装feeds
         ./scripts/feeds update -a
         ./scripts/feeds install -a
 
-        # 配置为x86/64
-        make menuconfig <<<EOF
-        $TARGET
-        $SUBTARGET
-        EOF
+        # 非交互式配置示例：直接复制预设的配置文件
+        # 假设你有一个名为 ".config" 的配置文件存放在你仓库的某个位置
+        # cp /path/to/your/.config ./.config
 
-        # 开始编译
-        make -j$(nproc) || make -j1 V=s
-        # 编译策略：先多线程，失败后单线程详细输出[citation:1]
+        # 或者，使用默认配置并进入 menuconfig 自动确认（如果支持）
+        # make defconfig
+        # 这里我们简单地生成一个目标配置，你可能需要根据实际情况调整
+        echo "CONFIG_TARGET_$TARGET=y" > .config
+        echo "CONFIG_TARGET_$TARGET_$SUBTARGET=y" >> .config
+        make defconfig
 
-    - name: Update cache if build successful
-      if: steps.check-previous.outputs.cache-hit != 'true' || steps.check-update.outputs.CURRENT_HEAD != hashFiles('cache/previous_head.hash')
-      run: |
-        mkdir -p cache
-        cp current_head.hash cache/previous_head.hash
-      # 使用actions/cache保存当前提交哈希[citation:4]
+        make -j"$(nproc)" || make -j1 V=s
 
     - name: Upload build artifacts
-      if: steps.check-previous.outputs.cache-hit != 'true' || steps.check-update.outputs.CURRENT_HEAD != hashFiles('cache/previous_head.hash')
+      shell: bash
+      if: steps.cache-previous-hash.outputs.cache-hit != 'true'
       uses: actions/upload-artifact@v4
       with:
         name: immortalwrt-x86-64-images
