--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -71,12 +71,10 @@ jobs:
         ./scripts/feeds install -a
         
         echo "配置编译目标为 $TARGET/$SUBTARGET..."
-        # 创建基本配置文件
-        cat > .config << EOF
-CONFIG_TARGET_${TARGET}=y
-CONFIG_TARGET_${TARGET}_${SUBTARGET}=y
-CONFIG_TARGET_${TARGET}_${SUBTARGET}_GENERIC=y
-EOF
+        # 使用逐行写入的方式创建配置文件，避免YAML解析问题
+        echo "CONFIG_TARGET_$TARGET=y" > .config
+        echo "CONFIG_TARGET_${TARGET}_${SUBTARGET}=y" >> .config
+        echo "CONFIG_TARGET_${TARGET}_${SUBTARGET}_GENERIC=y" >> .config
         
         # 应用默认配置
         make defconfig
