--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,8 +25,8 @@ jobs:
   check-and-build:
     runs-on: ubuntu-latest
     container:
-      image: ubuntu:24.04
-      options: --cap-add=SYS_ADMIN
+      image: debian:11-slim
+      options: --privileged
       
     steps:
     - name: Checkout repository
@@ -77,6 +77,7 @@ jobs:
       run: |
         set -ex
         cd "$WORKING_DIRECTORY"
+        export FORCE_UNSAFE_CONFIGURE=1
         
         echo "开始更新feeds..."
         ./scripts/feeds update -a
