--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -73,7 +73,7 @@ jobs:
 
     - name: Build ImmortalWrt if source updated
       shell: bash
-      if: steps.cache-hash.outputs.cache-hit != 'false'
+      if: steps.cache-hash.outputs.cache-hit != 'true'
       run: |
         set -ex
         cd "$WORKING_DIRECTORY"
@@ -94,7 +94,7 @@ jobs:
         
         echo "开始编译..."
         # 先尝试多线程编译，失败后使用单线程详细输出
-        make -j$(nproc) V=sc || {
+        make -j$(nproc) || {
           echo "多线程编译失败，尝试单线程编译..."
           make -j1 V=s
         }
