--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -147,21 +147,30 @@ jobs:
           echo "配置文件数量不足20个（当前 $CONFIG_COUNT 个），跳过清理"
         fi
 
+    # 新增：Git 环境验证步骤
+    - name: Verify Git environment
+      shell: bash
+      if: steps.cache-hash.outputs.cache-hit != 'true'
+      run: |
+        cd $GITHUB_WORKSPACE
+        echo "验证 Git 环境..."
+        git --version
+        git status
+        echo "当前分支: $(git branch --show-current)"
+        echo "远程仓库: $(git remote get-url origin)"
+        echo "Git 环境验证完成"
+
     - name: Commit config files to repository
       shell: bash
       if: steps.cache-hash.outputs.cache-hit != 'true'
       run: |
-        # 切换回仓库根目录
         cd $GITHUB_WORKSPACE
         
-        # 配置 Git
-        git config --local user.email "action@github.com"
-        git config --local user.name "GitHub Action"
+        git config user.email "action@github.com"
+        git config user.name "GitHub Action"
         
-        # 添加配置目录（使用新的目录名）
         git add $CONFIG_HISTORY_DIR/
         
-        # 只在有变化时提交
         if git diff --staged --quiet; then
           echo "配置文件无变化，跳过提交"
         else
