--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -110,12 +110,12 @@ jobs:
         cd "$WORKING_DIRECTORY"
         
         # 确保配置目录存在（使用新的目录名）
-        mkdir -p ../$CONFIG_HISTORY_DIR
+        mkdir -p $GITHUB_WORKSPACE/$CONFIG_HISTORY_DIR
         
         TIMESTAMP=$(date +%Y%m%d-%H%M%S)
         
         # 保存带时间戳的配置文件到新目录
-        cp .config ../$CONFIG_HISTORY_DIR/config-$TIMESTAMP.txt
+        cp .config $GITHUB_WORKSPACE/$CONFIG_HISTORY_DIR/config-$TIMESTAMP.txt
         
         # 保存最新配置文件到构建产物目录
         mkdir -p bin/targets/$TARGET/$SUBTARGET/
@@ -126,53 +126,20 @@ jobs:
         cp .config ../config-artifacts/immortalwrt-x86-64-config.txt
         
         echo "配置文件已保存：$CONFIG_HISTORY_DIR/config-$TIMESTAMP.txt"
-
-    - name: Clean up old configs (keep last 20)
-      shell: bash
-      if: steps.cache-hash.outputs.cache-hit != 'true'
-      run: |
-        # 切换到配置目录（使用新的目录名）
-        cd $CONFIG_HISTORY_DIR
         
-        # 计算当前配置文件数量
-        CONFIG_COUNT=$(ls -1 config-*.txt 2>/dev/null | wc -l)
-        echo "当前配置文件数量: $CONFIG_COUNT"
-        
-        # 保留最新的20个配置文件，删除更旧的
-        if [ $CONFIG_COUNT -gt 20 ]; then
-          ls -1t config-*.txt | tail -n +21 | xargs -r rm -f
-          echo "已清理旧配置文件，保留最新的20个"
-          echo "删除了 $((CONFIG_COUNT - 20)) 个旧配置文件"
-        else
-          echo "配置文件数量不足20个（当前 $CONFIG_COUNT 个），跳过清理"
-        fi
-
-    # 新增：Git 环境验证步骤
-    - name: Verify Git environment
-      shell: bash
-      if: steps.cache-hash.outputs.cache-hit != 'true'
-      run: |
-        cd $GITHUB_WORKSPACE
-        echo "验证 Git 环境..."
-        git --version
-        git status
-        echo "当前分支: $(git branch --show-current)"
-        echo "远程仓库: $(git remote get-url origin)"
-        echo "Git 环境验证完成"
-
     - name: Commit config files to repository
       shell: bash
       if: steps.cache-hash.outputs.cache-hit != 'true'
       run: |
         # 切换回仓库根目录
-        cd $GITHUB_WORKSPACE
+        cd "$GITHUB_WORKSPACE"
         
         # 配置 Git
         git config user.email "action@github.com"
         git config user.name "GitHub Action"
         
         # 添加配置目录（使用新的目录名）
-        git add $CONFIG_HISTORY_DIR/
+        git add "$CONFIG_HISTORY_DIR/"
         
         # 只在有变化时提交
         if git diff --staged --quiet; then
