--- a/.github/workflows/main3.yml
+++ b/.github/workflows/main3.yml
@@ -35,118 +35,16 @@ jobs:
         # 确保拉取所有分支和历史，以便后续推送
         fetch-depth: 0
         token: ${{ secrets.GITHUB_TOKEN }}
-
-    - name: Install dependencies
-      shell: bash
+        
+    - name: Debug Git environment
       run: |
-        apt-get update
-        apt-get full-upgrade -y
-        apt-get install -y bash git  # 确保安装bash和git
-        apt-get install -y ack antlr3 asciidoc autoconf automake autopoint binutils bison build-essential \
-          bzip2 ccache clang cmake cpio curl device-tree-compiler ecj fastjar flex gawk gettext gcc-multilib \
-          g++-multilib git gnutls-dev gperf haveged help2man intltool lib32gcc-s1 libc6-dev-i386 libelf-dev \
-          libglib2.0-dev libgmp3-dev libltdl-dev libmpc-dev libmpfr-dev libncurses5-dev libncurses-dev libpython3-dev \
-          libreadline-dev libssl-dev libtool libyaml-dev libz-dev lld llvm lrzsz mkisofs msmtp nano \
-          ninja-build p7zip p7zip-full patch pkgconf python3 python3-pip python3-ply python3-docutils \
-          python3-pyelftools qemu-utils re2c rsync scons squashfs-tools subversion swig texinfo uglifyjs \
-          upx-ucl unzip vim wget xmlto xxd zlib1g-dev zstd
-
-    - name: Check working directory
-      shell: bash
-      run: |
-        echo "工作目录内容:"
+        echo "=== 环境信息 ==="
+        echo "工作目录: $(pwd)"
+        echo "GITHUB_WORKSPACE: $GITHUB_WORKSPACE"
+        echo "=== 目录结构 ==="
         ls -la
-
-    - name: Check for updates in master branch
-      id: check-update
-      shell: bash
-      run: |
-        cd "$WORKING_DIRECTORY"
-        LATEST_COMMIT_HASH=$(git rev-parse HEAD)
-        echo "latest_commit=$LATEST_COMMIT_HASH" >> $GITHUB_OUTPUT
-        echo "CURRENT_HASH=$LATEST_COMMIT_HASH" >> $GITHUB_ENV
-        echo "Latest commit hash: $LATEST_COMMIT_HASH"
-
-    - name: Restore cached commit hash
-      id: cache-hash
-      uses: actions/cache@v4
-      with:
-        path: .cache
-        key: immortalwrt-${{ steps.check-update.outputs.latest_commit }}
-        restore-keys: |
-          immortalwrt-
-
-    - name: Build ImmortalWrt if source updated
-      shell: bash
-      if: steps.cache-hash.outputs.cache-hit != 'true'
-      run: |
-        set -euxo pipefail
-        cd "$WORKING_DIRECTORY"
-        export FORCE_UNSAFE_CONFIGURE=1
-        
-        echo "开始更新feeds..."
-        # 添加超时和重试机制
-        timeout 1800 ./scripts/feeds update -a || timeout 1800 ./scripts/feeds update -a
-        ./scripts/feeds install -a
-        
-        echo "配置编译目标为 $TARGET/$SUBTARGET..."
-        # 使用逐行写入的方式创建配置文件，避免YAML解析问题
-        echo "CONFIG_TARGET_$TARGET=y" > .config
-        echo "CONFIG_TARGET_${TARGET}_${SUBTARGET}=y" >> .config
-        echo "CONFIG_TARGET_${TARGET}_${SUBTARGET}_GENERIC=y" >> .config
-        
-        # 应用默认配置
-        make defconfig
-        
-    - name: Generate and save config files
-      shell: bash
-      if: steps.cache-hash.outputs.cache-hit != 'true'
-      run: |
-        cd "$WORKING_DIRECTORY"
-        
-        # 确保配置目录存在
-        mkdir -p $GITHUB_WORKSPACE/$CONFIG_HISTORY_DIR
-        
-        TIMESTAMP=$(date +%Y%m%d-%H%M%S)
-        
-        # 保存带时间戳的配置文件
-        cp .config $GITHUB_WORKSPACE/$CONFIG_HISTORY_DIR/config-$TIMESTAMP.txt
-        
-        # 保存最新配置文件到构建产物目录
-        mkdir -p bin/targets/$TARGET/$SUBTARGET/
-        cp .config bin/targets/$TARGET/$SUBTARGET/config-latest.txt
-        
-        # 为单独配置文件构建物创建目录
-        mkdir -p ../config-artifacts
-        cp .config ../config-artifacts/immortalwrt-x86-64-config.txt
-        
-        echo "配置文件已保存：$CONFIG_HISTORY_DIR/config-$TIMESTAMP.txt"
-
-    - name: Commit config files to repository
-      shell: bash
-      if: steps.cache-hash.outputs.cache-hit != 'true'
-      env:
-        GH_TOKEN: ${{ github.token }}
-      run: |
-        # 切换回仓库根目录
-        cd "$GITHUB_WORKSPACE"
-        echo "工作目录内容:"
-        ls -la
-        
-        # 配置 Git
-        git config user.email "action@github.com"
-        git config user.name "GitHub Action"
-        
-        # 添加配置目录
-        git add "$CONFIG_HISTORY_DIR/"
-        
-        # 只在有变化时提交
-        if git diff --staged --quiet; then
-          echo "配置文件无变化，跳过提交"
-        else
-          git commit -m "Update ImmortalWrt configuration history [skip ci]"
-          # 使用 token 推送
-          git push "https://$GH_TOKEN@github.com/${{ github.repository }}.git" HEAD:${{ github.ref }}
-          echo "配置文件已提交到仓库的 $CONFIG_HISTORY_DIR 目录"
-        fi  
-        
+        echo "=== 查找 Git ==="
+        find . -name ".git" -type d 2>/dev/null | head -10
+        echo "=== Git 命令测试 ==="
+        git status 2>&1 || echo "Git 命令失败"
+        echo "=== 结束调试 ==="  
