--- a/.github/workflows/main3.yml
+++ b/.github/workflows/main3.yml
@@ -26,7 +26,7 @@ jobs:
   check-and-build:
     runs-on: ubuntu-latest
     container:
-      image: debian:11-slim
+      image: debian:11
       
     steps:
     - name: Checkout repository
