--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -91,9 +91,11 @@ jobs:
         echo "配置编译目标为 $TARGET/$SUBTARGET..."
         # 复制预定义的配置
         cp $GITHUB_WORKSPACE/$CONFIG_HISTORY_DIR/.config .config
-        
+        export TERM=xterm
+        export TERMINFO=/usr/share/terminfo
         # 应用默认配置
         make defconfig
+        make oldconfig
         
     - name: Build Toolchain
       run: |
