--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,22 +26,24 @@ env:
 jobs:
   check-and-build:
     runs-on: ubuntu-22.04
+    container:
+      image: debian:11-slim
       
     steps:
     - name: Install dependencies
       shell: bash
       run: |
-        sudo apt-get update
-        sudo apt-get full-upgrade -y
-        sudo apt-get install -y bash git curl ca-certificates  # 确保安装bash
-        sudo apt-get install -y ack antlr3 asciidoc autoconf automake autopoint binutils bison build-essential \   
-             bzip2 ccache clang cmake cpio device-tree-compiler ecj fastjar flex gawk gettext gcc-multilib \
-             g++-multilib gnutls-dev gperf haveged help2man intltool lib32gcc-s1 libc6-dev-i386 libelf-dev \
-             libglib2.0-dev libgmp3-dev libltdl-dev libmpc-dev libmpfr-dev libncurses5-dev libncurses-dev libpython3-dev \
-             libreadline-dev libssl-dev libtool libyaml-dev libz-dev lld llvm lrzsz mkisofs msmtp nano \
-             ninja-build p7zip p7zip-full patch pkgconf python3 python3-pip python3-ply python3-docutils \
-             python3-pyelftools qemu-utils re2c rsync scons squashfs-tools subversion swig texinfo uglifyjs \
-             upx-ucl unzip vim wget xmlto xxd zlib1g-dev zstd
+        apt-get update
+        apt-get full-upgrade -y
+        apt-get install -y bash git curl ca-certificates  # 确保安装bash
+        apt-get install -y ack antlr3 asciidoc autoconf automake autopoint binutils bison build-essential \
+          bzip2 ccache clang cmake cpio device-tree-compiler ecj fastjar flex gawk gettext gcc-multilib \
+          g++-multilib gnutls-dev gperf haveged help2man intltool lib32gcc-s1 libc6-dev-i386 libelf-dev \
+          libglib2.0-dev libgmp3-dev libltdl-dev libmpc-dev libmpfr-dev libncurses5-dev libncurses-dev libpython3-dev \
+          libreadline-dev libssl-dev libtool libyaml-dev libz-dev lld llvm lrzsz mkisofs msmtp nano \
+          ninja-build p7zip p7zip-full patch pkgconf python3 python3-pip python3-ply python3-docutils \
+          python3-pyelftools qemu-utils re2c rsync scons squashfs-tools subversion swig texinfo uglifyjs \
+          upx-ucl unzip vim wget xmlto xxd zlib1g-dev zstd
         
     - name: Checkout repository
       uses: actions/checkout@v4
