--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -55,7 +55,7 @@ jobs:
     - name: Clone ImmortalWrt master branch
       shell: bash
       run: |
-        git clone -b master --depth=1 --single-branch --filter=blob:none https://github.com/immortalwrt/immortalwrt.git $WORKING_DIRECTORY
+        git clone -b master --depth=1 --single-branch https://github.com/immortalwrt/immortalwrt.git $WORKING_DIRECTORY
 
     - name: Check for updates in master branch
       id: check-update
@@ -83,7 +83,6 @@ jobs:
         set -ex
         cd "$WORKING_DIRECTORY"
         echo "FORCE_UNSAFE_CONFIGURE=1" >> $GITHUB_ENV
-        echo "TERM=dumb" >> $GITHUB_ENV
         
         # 创建必要的目录
         mkdir -p dl staging_dir tmp
@@ -96,15 +95,11 @@ jobs:
         ./scripts/feeds update -a
         ./scripts/feeds install -a
         
-        echo "Feeds更新后:" >> space_usage.log
-        du -sh . | grep -oE '[0-9.]+[A-Z]' >> space_usage.log
         
         echo "配置编译目标为 $TARGET/$SUBTARGET..."
         # 复制预定义的配置
         cp $GITHUB_WORKSPACE/$CONFIG_HISTORY_DIR/.config .config
 
-        # 应用默认配置
-        make defconfig
        
     - name: Build Tools
       run: |
