--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -98,9 +98,11 @@ jobs:
         
         echo "配置编译目标为 $TARGET/$SUBTARGET..."
         # 复制预定义的配置
-        cp $GITHUB_WORKSPACE/$CONFIG_HISTORY_DIR/.config .config
-
-       
+        cd $GITHUB_WORKSPACE/config-x86-64-history/
+        ls -la
+        cp .config $GITHUB_WORKSPACE/immortalwrt-x86/.config
+        cd $GITHUB_WORKSPACE/immortalwrt-x86/
+        ls -la
     - name: Build Tools
       run: |
         echo "=== 编译工具 ==="
