--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -55,7 +55,7 @@ jobs:
     - name: Clone ImmortalWrt master branch
       shell: bash
       run: |
-        git clone -b master --depth=1 --single-branch https://github.com/immortalwrt/immortalwrt.git $WORKING_DIRECTORY
+        git clone -b master --single-branch https://github.com/immortalwrt/immortalwrt.git $WORKING_DIRECTORY
 
     - name: Check for updates in master branch
       id: check-update
