--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -81,11 +81,8 @@ jobs:
       if: steps.cache-hash.outputs.cache-hit != 'true'
       run: |
         set -ex
-        cd "$WORKING_DIRECTORY"
+        cd $GITHUB_WORKSPACE/immortalwrt-x86/
         echo "FORCE_UNSAFE_CONFIGURE=1" >> $GITHUB_ENV
-        
-        # 创建必要的目录
-        mkdir -p dl staging_dir tmp
         
         # 初始化空间使用记录
         echo "初始状态:" > space_usage.log
